WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
308331
[AppKit Gestures] REGRESSION(
307810@main
): Certain text selection behaviors broken after deferred click handling integration
https://bugs.webkit.org/show_bug.cgi?id=308331
Summary
[AppKit Gestures] REGRESSION(307810@main): Certain text selection behaviors b...
Abrar Rahman Protyasha
Reported
2026-02-20 13:49:57 PST
rdar://170829843
Attachments
Add attachment
proposed patch, testcase, etc.
Abrar Rahman Protyasha
Comment 1
2026-02-20 13:52:28 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59115
EWS
Comment 2
2026-02-20 17:23:20 PST
Committed
307953@main
(0ce55cf1b31e): <
https://commits.webkit.org/307953@main
> Reviewed commits have been landed. Closing PR #59115 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug