[AppKit Gestures] REGRESSION(307810@main): Certain text selection behaviors broken after deferred click handling integration https://bugs.webkit.org/show_bug.cgi?id=308331 rdar://170829843

Reviewed by Richard Robinson and Wenson Hsieh.

In 307810@main, we mistakenly plumbed the wrong mouse event input source
for deferred click handling. This patch addresses the oversight, thus
unblocking EventHandler from making selection changes.

* Source/WebKit/UIProcess/mac/WKAppKitGestureController.mm:
(-[WKAppKitGestureController secondaryClickGestureRecognized:]):
(-[WKAppKitGestureController _handleClickBegan:]):

Canonical link: https://commits.webkit.org/307953@main